# Pico-zkCoprocessor

./: .gitignore  Cargo.toml  README.md
elf/: riscv32im-pico-precompile-elf  riscv32im-pico-zkvm-elf
network/: Cargo.toml  build.rs
network/proto/: gateway.proto
network/proto/common/: circuit_data.proto
network/src/: client.rs  request.rs
sdk/: Cargo.toml
sdk/src/: inputs_merkle.rs  lib.rs  poseidon2_hash.rs  sdk.rs
sdk/src/data_types/: address.rs  byte32.rs  hash_out.rs  mod.rs
sdk/src/input_types/: mod.rs  receipt.rs  storage.rs  transaction.rs  utils.rs
