[package]
name = "vm-coprocessor-server"
version = "0.1.0"
edition = "2021"

[[bin]] # Bin to run the HelloWorld gRPC client
name = "brevis-request"
path = "src/client.rs"


[dependencies]
coprocessor-sdk.workspace = true
tonic = { version = "0.12.3", features = ["tls", "tls-roots"] }
prost = "0.13"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"

[build-dependencies]
tonic-build = "0.12.3"

